--- a/index.html
+++ b/index.html
@@ -9,9 +9,9 @@
 <body>
     <h1>Odin Recipes</h1>
  <ul>
-        <li> <a href="./recipes/matoke.html">matoke</a></li>
-        <li><a href="./recipes/Peanut_butter.html"> Peanut butter</a></li>
-        <li> <a href="./recipes/rwandan_tea .html">rwandan tea</a></li>
+        <li> <a href="recipes/matoke.html">matoke</a></li>
+        <li><a href="recipes/Peanut_butter.html"> Peanut butter</a></li>
+        <li> <a href="recipes/rwandan_tea.html">rwandan tea</a></li>
       </ul>
 </body>
 </html>
