--- a/Recipes/Peanut_butter.html
+++ b/Recipes/Peanut_butter.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Chocolate chip muffins</title>
+    <title>peanut butter</title>
 </head>
 <body>
     <h1>Peanut butter</h1>
